--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,4 +3,34 @@ name = "skype-emoticon-scraper"
 version = "0.1.0"
 edition = "2021"
 
+[workspace]
+members = ["crates/skype"]
+
+[workspace.dependencies]
+skype = { path = "crates/skype" }
+
+image = "0.25"
+reqwest = { version = "0.12", features = ["json"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+thiserror = "1.0"
+
 [dependencies]
+skype.workspace = true
+
+clap = { version = "4.5", features = ["derive"] }
+color-eyre = "0.6"
+futures = "0.3"
+image.workspace = true
+itertools = "0.13"
+rayon = "1.10"
+reqwest.workspace = true
+serde.workspace = true
+serde_json.workspace = true
+tokio = { version = "1.40", features = ["full"] }
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+
+# Improve backtrace performance on dev builds, as recommended by the `color-eyre` crate
+[profile.dev.package.backtrace]
+opt-level = 3
